--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
     
 }
 .bold{
-    width: 17%;
+    width: 25%;
     height: 300px;
     margin: 10px;
     border: 1px solid black;
@@ -71,7 +71,7 @@
     border: 1px solid black;
     color: aliceblue;
     background: #09e42a;
-    width: 80%;
+    width: 85git%;
     text-align: center;
     margin: 25px;
 }
